Fix some styling on mobile menu
Removed underline, added top border to make it easier to see edges of
buttons.

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -168,9 +168,12 @@ $transparent: rgba(245,245,245,0.0);
             width: 200px;
             right: 0;
             li a {
-              min-width: 100% !important;
-              // background-color: transparentize(#ddd, 0.9);
-              width: ($social-icon-size + $social-icon-pad) * 2 !important;
+				min-width: 100% !important;
+				// background-color: transparentize(#ddd, 0.9);
+				width: ($social-icon-size + $social-icon-pad) * 2 !important;
+              	&:hover { 
+              		text-decoration: none;
+              		}
             }
 			span {font-size: .65rem; padding-left: 1rem; padding-right: 1rem; }
 			li {
@@ -402,7 +405,16 @@ $transparent: rgba(245,245,245,0.0);
 @media #{$small-only} {
   #mobile-menu {
     list-style-type: none;
-  }
+    a:hover {text-decoration: none;}
+    }
+
+	#navigation-section 
+		ul 
+			li
+			{border-top: 1px solid #aaa;}
+			li:hover a {text-decoration: none;}
+	
+
 }
 
 @media #{$medium-only} {
